# aoc2024

./: .env.example  Cargo.toml  README.md
src/: lib.rs  parsers.rs
src/grid_vec/: direction.rs  grid.rs  mod.rs  point.rs
utils/scaffold/src/: main.rs
