[workspace.package]
description = "template for advent of code"
readme = "README.md"
version = "48.0.0"
edition = "2021"
license = "MIT"
authors = ["Matej Janežič <janezic.mj@gmail.com>"]
repository = "https://git.janezic.dev/janezicmatej/aoc-template.git"

[workspace]
members = ["utils/download", "utils/scaffold"]

[package]
name = "aoc"
description.workspace = true
readme.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]

